# jenkins-mcp

./: README.md
mcp-servers/: README.md
mcp-servers/my-jenkins-server/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SUBMISSION_CHECKLIST.md  jenkins_mcp_server.py  jenkins_mcp_server_enhanced.py  pyproject.toml  server.yaml  tools.json
